--- a/src/pages/adddata/adddata.html
+++ b/src/pages/adddata/adddata.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>เพิ่มรายการนรายรับ-รายจ่าย</ion-title>
+    <ion-title>เพิ่มรายการรายรับ-รายจ่าย</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -26,6 +26,6 @@
     <ion-label>จำนวนเงิน</ion-label>
     <ion-input type="number" placeholder="จำนวนเงิน" [(ngModel)]="data.amount" name="amount" required=""></ion-input>
   </ion-item>
-  <button ion-button type="submit" block></button>
+  <button ion-button type="submit" block>บันทึกข้อมูล</button>
 </form>
 </ion-content>
