--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
 <ion-content padding>
   <h3>รายการรายจ่าย</h3>
   <ion-list>
-    <ion-item-sliding *ngFor="let expense of expense; let i=index">
+    <ion-item-sliding *ngFor="let expense of expenses; let i=index">
       <ion-item nopadding>
         <p>
           <span>{{expense.date}}</span><br>
@@ -25,11 +25,11 @@
           Amount: {{expense.amount}}
         </h3>
       </ion-item>
-      <ion-item-options side="right">
+      <ion-item-options side="right"> 
         <button ion-button color="primary" (click)="editData(expense.rowid)">
           <ion-icon name="paper"></ion-icon>
         </button>
-        <button ion-button color="danger" (click)="deleteDate(expense.rowid)">
+        <button ion-button color="danger" (click)="deleteData(expense.rowid)">
           <ion-icon name="trash"></ion-icon>
         </button>
       </ion-item-options>
