--- a/src/pages/editdata/editdata.html
+++ b/src/pages/editdata/editdata.html
@@ -1,15 +1,31 @@
-<!--
-  Generated template for the EditdataPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>editdata</ion-title>
+    <ion-title>เพิ่มรายการรายรับ-รายจ่าย</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+<h2>แก้ไขข้อมูล</h2>
+<form (ngSubmit)="updateData()">
+  <ion-item>
+    <ion-label floatting>วันที่</ion-label>
+    <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="data.date" name="date" required=""></ion-datetime>
+  </ion-item>
+  <ion-item>
+    <ion-label>ประเภท</ion-label>
+    <ion-select [(ngModel)]="data.type" name="type" required="">
+      <ion-option value="Income">รายรับ</ion-option>
+      <ion-option value="Expense">รายจ่าย</ion-option>
+    </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-label>รายละเอียด</ion-label>
+    <ion-input type="text" placeholder="รายละเอียด" [(ngModel)]="data.description" name="description" required=""></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label>จำนวนเงิน</ion-label>
+    <ion-input type="number" placeholder="จำนวนเงิน" [(ngModel)]="data.amount" name="amount" required=""></ion-input>
+  </ion-item>
+  <button ion-button type="submit" block>แก้ไขข้อมูล</button>
+</form>
 </ion-content>
